// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ULThemeList Components ULThemeList matches snapshot 1`] = `
<DocumentFragment>
  <ul
    class="text-sm space-y-3 divide-border list-none divide-y"
  >
    <div>
      Child Content
    </div>
  </ul>
</DocumentFragment>
`;

exports[`ULThemeList Components ULThemeListDescription matches snapshot 1`] = `
<DocumentFragment>
  <p
    class="text-body-text text-(length:--font-size-list-subtitle) leading-(height:--font-size-list-subtitle)"
  >
    Description Content
  </p>
</DocumentFragment>
`;

exports[`ULThemeList Components ULThemeListItem matches snapshot 1`] = `
<DocumentFragment>
  <li
    class="flex items-start justify-between gap-2 theme-universal:font-(weight:--ul-theme-font-body-text-weight) mb-4 last:mb-8"
  >
    <div
      class="flex min-w-0 gap-2"
    >
      <div
        class="text-muted-foreground mt-1 shrink-0"
      >
        <span>
          Icon
        </span>
      </div>
      <div
        class="min-w-0 flex flex-col gap-1"
      >
        Item Content
      </div>
    </div>
    <div
      class="shrink-0"
    >
      <span>
        Info
      </span>
    </div>
  </li>
</DocumentFragment>
`;

exports[`ULThemeList Components ULThemeListTitle matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="text-header font-bold text-(length:--font-size-list-title) leading-(height:--font-size-list-title)"
  >
    Title Content
  </div>
</DocumentFragment>
`;
